refactor(schedule): 暂时下线查询日志详情功能（Snail Job 日志详情 API 变更为 WebSocket 模式）